--- a/mmv1/products/datastream/terraform.yaml
+++ b/mmv1/products/datastream/terraform.yaml
@@ -99,3 +99,16 @@ overrides: !ruby/object:Overrides::ResourceOverrides
       sourceConfig.mysqlSourceConfig.maxConcurrentCdcTasks: !ruby/object:Overrides::Terraform::PropertyOverride
         validation: !ruby/object:Provider::Terraform::Validation
           function: 'validation.IntAtLeast(0)'
+    examples:
+      - !ruby/object:Provider::Terraform::Examples
+        name: "datastream_stream_basic"
+        primary_resource_id: "default"
+        vars:
+          stream_id: "my-stream"
+          private_connection_id: "my-connection"
+          network_name: "my-network"
+          source_connection_profile_id: "source-profile"
+          database_instance_name: "my-instance"
+          deletion_protection: "true"
+          bucket_id: "my-bucket"
+          destination_connection_profile_id: "destination-profile"
