--- a/mmv1/products/datastream/api.yaml
+++ b/mmv1/products/datastream/api.yaml
@@ -1082,7 +1082,7 @@ objects:
           - :FAILED_PERMANENTLY
           - :STARTING
           - :DRAINING
-        default: :NOT_STARTED
+        default_value: :NOT_STARTED
       - !ruby/object:Api::Type::NestedObject
         name: 'backfillAll'
         exactly_one_of:
